# computer-programming-project

./: .gitignore  CMakeLists.txt  execution_timer.cpp  execution_timer.h  iteration_search.cpp  iteration_search.h  main.cpp  pair_search.cpp  pair_search.h  projekt_22.h  projekt_22_tests.h  readme.md  recursive_pair_search.cpp  recursive_pair_search.h  recursive_search.cpp  recursive_search.h  recursive_single_search.cpp  recursive_single_search.h  search_algorithm_base.cpp  search_algorithm_base.h  search_result.cpp  search_result.h  single_search.cpp  single_search.h  utils.h
docs/: docs.docx
